[package]
name = "indexed_valued_enums"
version = "0.8.4"
edition = "2021"
authors = ["Jorge Rico Vivas <jorgericosoftware@gmail.com>"]
license-file = "LICENSE.txt"
description = "Crate to easily create C-like enums resolving into values"
repository = "https://github.com/JorgeRicoVivas/indexed_valued_enums"
keywords = ["valued", "enum"]
categories = ["no-std", "no-std::no-alloc"]

[lib]
crate-type = ["lib"]

[dependencies]
serde = { version = "1.0.193", optional=true }

[features]
serde_enums=["dep:serde"]